--- a/src/app/shared/components/resizeable-table/resizeable-table.component.scss
+++ b/src/app/shared/components/resizeable-table/resizeable-table.component.scss
@@ -2,7 +2,7 @@
 
 .mat-table {
   width: 100%;
-  // overflow: auto;
+  display: table;
 }
 
 mat-cell,
